corrected alignment of btns by placing in divs

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -40,7 +40,10 @@ $col-color: #fff;
   text-align: center;
 }
 
-.btn {
+.form-button {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
   text-align: center;
 }
 
